--- a/client/src/components/prescriptions/allPrescriptionsWidget.css
+++ b/client/src/components/prescriptions/allPrescriptionsWidget.css
@@ -1,17 +1,21 @@
 .prescription {
-    transform: scale(100%);
-    transition: .5s;
+  transform: scale(100%);
+  transition: 0.5s;
 }
 
 .prescription:hover {
-    transform: scale(110%);
-    transition: .5s;
+  transform: scale(110%);
+  transition: 0.5s;
 }
 
 .selected-prescription {
-    opacity: 100%;
+  opacity: 100%;
 }
 
 .non-selected-prescription {
-    opacity: 30%;
+  opacity: 30%;
+}
+
+.lightScrollbar {
+  scrollbar-width: none;
 }
