--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
 body {
   padding: 0;
   margin: 0;
 }
 
 .main-font {
-  font-family: Roboto;
+  font-family: quicksand;
 }
 
 .bg-primary-color {
