--- a/client/src/components/dosage/dosageRow.css
+++ b/client/src/components/dosage/dosageRow.css
@@ -2,6 +2,17 @@ input,
 input:focus,
 input:active {
   border: none;
-  outline: none;     /* removes the focus ring */
-  box-shadow: none;  /* removes Bootstrap's blue glow */
+  outline: none; /* removes the focus ring */
+  box-shadow: none; /* removes Bootstrap's blue glow */
+}
+
+.no-print {
+    background-color: red;
+}
+
+@media print {
+  .no-print {
+    background-color: red;
+  }
+
 }
