--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,17 @@ body {
   background-color: #00808031;
 }
 
-.bg-gray-coloraze {
-  background-color: #d8e7d8;
+.bg-gray-color {
+  background-color: #d4d4d4;
+}
+
+.bg-blue {
+  background-color: #6187da;
+}
+
+#fileInput::file-selector-button {
+  font-family: quicksand;
+  padding: 0.4rem 0.8rem 0.4rem 0.8rem;
+  border: 0.1em rgb(80, 80, 80) solid;
+  border-radius: 9px;
 }
