Polishing the front.

--- a/client/src/vues/institutes.css
+++ b/client/src/vues/institutes.css
@@ -1,3 +1,9 @@
+#instituteRoot {
+    min-height: 100vh !important;
+    background-image: url('/img/institutes_back.jpg') !important;
+    background-size: cover !important;
+}
+
 .icon {
   width: 1.6rem;
   height: auto;
