--- a/client/src/vues/patientDetails.css
+++ b/client/src/vues/patientDetails.css
@@ -1,5 +1,5 @@
 #patientDetailRoot {
     min-height: 100vh !important;
-    background-image: url('img/dashboard_back.jpg') !important;
+    background-image: url('/img/patients_back.jpg') !important;
     background-size: cover !important;
 }
