Cleaned some bad urls.

--- a/client/src/vues/dashboard.css
+++ b/client/src/vues/dashboard.css
@@ -1,5 +1,5 @@
 #dashRoot {
-  background-image: url('img/dashboard_back.jpg');
+  background-image: url('/img/dashboard_back.jpg');
   background-size: cover;
 }
 
