--- a/client/src/vues/archivedPatients.css
+++ b/client/src/vues/archivedPatients.css
@@ -1,5 +1,5 @@
 #archivedPatientRoot {
     min-height: 100vh;
-    background-image: url('img/patients_back.jpg');
+    background-image: url('/img/patients_back.jpg');
     background-size: cover;
 }
