--- a/client/src/vues/doctors.css
+++ b/client/src/vues/doctors.css
@@ -1,4 +1,4 @@
 #doctorsRoot {
-  background-image: url('img/doctors_back.jpg');
+  background-image: url('/img/doctors_back.jpg');
   background-size: cover;
 }
