Fixed the hight contrast mode and the dark mode

--- a/client/src/components/dosage/dosageRow.css
+++ b/client/src/components/dosage/dosageRow.css
@@ -14,5 +14,10 @@ input:active {
   .no-print {
     background-color: red;
   }
-
+}
+[data-bs-theme="dark"] .no-print {
+  background-color: red !important;
+}
+[data-bs-theme="contrast"] .no-print {
+  background-color: red !important;
 }
