--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,15 @@
 body {
   padding: 0;
   margin: 0;
+  background-color: #fff;
+}
+
+[data-bs-theme="dark"] body {
+  background-color: #1a1a2e;
+}
+
+[data-bs-theme="contrast"] body {
+  background-color: #000;
 }
 
 .main-font {
