--- a/client/src/vues/settings.css
+++ b/client/src/vues/settings.css
@@ -60,3 +60,17 @@
 [data-bs-theme="contrast"] a {
     color: #0ff !important;
 }
+
+[data-bs-theme="contrast"] label,
+[data-bs-theme="contrast"] .form-check-label {
+    color: #fff !important;
+}
+
+[data-bs-theme="contrast"] .form-check-input {
+    border-color: #0ff !important;
+}
+
+[data-bs-theme="contrast"] .form-check-input:checked {
+    background-color: #0ff !important;
+    border-color: #0ff !important;
+}
